--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 
   </ul>
 
+ <button type="button" class="click"> Click me </button>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script type="text/javascript" src="main.js"></script>
+ 
 </body>
 
 </html>
